# feedcli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  feeds.txt  pyproject.toml
.github/workflows/: ci.yml  release.yml
feedcli/: cli.py  config.py  core.py  feeds.py  fetch.py  models.py  render.py  store.py
tests/: test_core.py  test_store.py  test_today.py
