[project]
name = "feedcli"
version = "0.1.0"
description = "Feeder RSS/Atom de terminal em Python"
authors = [{name = "Seu Nome", email = "email@exemplo.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer[all]",
  "rich",
  "feedparser",
  "trafilatura",
  "beautifulsoup4",
]

[project.scripts]
feed = "feedcli.cli:app"

[tool.ruff]
line-length = 100
lint.select = ["E","F","I","UP","B"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
