[project]
name = "feedcli"
version = "1.0.0"
description = "Feeder RSS/Atom de terminal em Python"
authors = [{name = "Guilherme Gois", email = "guilhermejcgois@outlook.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer[all]",
  "rich",
  "feedparser",
  "trafilatura",
  "beautifulsoup4",
]

[project.scripts]
feed = "feedcli.cli:app"

[tool.ruff]
line-length = 100
lint.select = ["E","F","I","UP","B"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.semantic_release]
branch = "main"
version_source = "tag"
tag_format = "v{version}"
version_variables = ["feedcli/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
commit_version_number = true
commit_parser = "conventional"
changelog_file = "CHANGELOG.md"
build_command = "python -m pip install --upgrade build && python -m build"
upload_to_pypi = false
upload_to_release = true